# openai-adapter

./: CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: coverage.yml  quality-check.yml  tests.yml
openai_adapter/: __init__.py
openai_adapter/llm/: __init__.py  adapter.py
openai_adapter/query_embedding/: __init__.py  adapter.py
tests/: test_llm_adapter.py  test_query_embedding_adapter.py
