[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-adapter"
version = "0.1.0"
authors = [{ name = "RetrievalLabs" }]
description = "OpenAI adapter of rag-control"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "openai>=1.0.0,<2.0.0",
    "rag-control==0.1.3",
]
license = { file = "LICENSE" }

keywords = [
  "rag-control",
  "openai",
  "rag",
  "llm",
  "governance",
  "ai-security",
  "retrieval",
  "rbac",
  "hallucination",
  "enterprise-ai"
]

[tool.setuptools.package-data]
openai_adapter = ["py.typed"]

[tool.ruff]
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.black]
line-length = 100

[tool.mypy]
strict = true

[dependency-groups]
dev = [
    "black>=25.11.0",
    "mypy>=1.19.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.1",
]

[tool.coverage.run]
source = ["openai_adapter"]

[tool.coverage.report]
show_missing = true
skip_covered = false
omit = ["tests/*"]
